--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,8 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=votre_cle_publique_stripe
 ONESIGNAL_API_KEY=votre_cle_api_onesignal
 ONESIGNAL_APP_ID=votre_app_id_onesignal
 NEXT_PUBLIC_ONESIGNAL_APP_ID=votre_app_id_onesignal
+
+# Webhooks - Revalidation automatique (Supabase → Vercel)
+WEBHOOK_SECRET=generez_un_secret_aleatoire_securise
+VERCEL_REVALIDATE_TOKEN=generez_un_secret_aleatoire_securise
+VERCEL_DEPLOY_URL=https://votre-site.vercel.app
